--- a/public_records_portal/templates/landing.html
+++ b/public_records_portal/templates/landing.html
@@ -1,7 +1,7 @@
 <!-- This template is for the landing page. -->
 
 {% extends "base.html" %}
-{% block title %}RecordTrac{% endblock title %}
+{% block title %}{% trans %}RecordTrac{% endtrans %}{% endblock title %}
 
 {% block custom_css_links %}
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/landing.css') }}">
@@ -14,14 +14,14 @@
 		<div class="row-fluid">
 			<div class="span8">
 				<h1 id="landing_brand">{% trans %}RecordTrac{% endtrans %}</h1>
-				<h3>A better way to find public records.</h3>
+				<h3>{% trans %}tagline{% endtrans %}</h3>
 			</div>
 			<div class="span4">
 				<img id="logo_landing" src="{{config['LOGO_ON_WHITE_URL']}}" alt="{{config['AGENCY_NAME']}} logo"/>
 			</div>
 		</div>
 		<div class="row-fluid">
-			<p class="lead">Use RecordTrac to tell the {{config['AGENCY_NAME']}} the type of documents you need. We display every message or record uploaded. You may find what you're looking for without having to submit a new request.  <a href="/about">Find out more…</a></p>
+			<p class="lead">{% trans agency_name=config['AGENCY_NAME'] %}Use RecordTrac to tell the {{agency_name}} the type of documents you need. We display every message or record uploaded. You may find what you're looking for without having to submit a new request.{% endtrans %}</p>
 		</div>
 		<div class="row-fluid">
 			<div class="span10 offset1">
@@ -31,9 +31,8 @@
 							<a href="/view_requests" class="btn btn-link round_link">
 								<img src="{{ url_for('static', filename='images/explore.png') }}" class="left-image" alt="explore">
 								<h4 class="text-center text-title">{% trans %}EXPLORE{% endtrans %}</h4>
-								<p class="span10 offset1 text-center text-body">View <span id="request-count" class="badge badge-info">
-									{% set all_record_requests = "Request" | get_objs %}
-									{{ all_record_requests | count }}</span> past requests and counting.
+								{% set all_record_requests = "Request" | get_objs %}
+								<p class="span10 offset1 text-center text-body">{% trans counter=(all_record_requests | count) %}View <span id="request-count" class="badge badge-info">{{counter}}</span> past requests and counting.{% endtrans %}
 								</p>
 							</a>
 						</div>
@@ -43,7 +42,7 @@
 							<a href="/new" class="btn btn-link round_link">
 								<img src="{{ url_for('static', filename='images/create.png') }}" class="center-image" alt="create">
 								<h4 class="text-center text-title">{% trans %}REQUEST{% endtrans %}</h4>
-								<p class="span10 offset1 text-center text-body">Create a new public records request.</p>
+								<p class="span10 offset1 text-center text-body">{% trans %}Create a new public records request.{% endtrans %}</p>
 							</a>
 						</div>
 					</div>
@@ -52,7 +51,7 @@
 							<a href="/track" class="btn btn-link round_link">
 								<img src="{{ url_for('static', filename='images/track.png') }}" class="right-image" alt="track">
 								<h4 class="text-center text-title">{% trans %}TRACK{% endtrans %}</h4>
-								<p class="span10 offset1 text-center text-body">Get real-time updates as we process your request.</p>
+								<p class="span10 offset1 text-center text-body">{% trans %}Get updates as we process your request.{% endtrans %}</p>
 							</a>
 						</div>
 					</div>
@@ -102,8 +101,7 @@
 
 {% block footer %}
     <div id="footer" class="footer">
-      <p class="text-center">For more information about this application or instructions on how to get the app for <em>your</em> agency, <a href="https://github.com/codeforamerica/recordtrac" target="_blank"> view project info and documentation</a>.</p>
-      <p class="text-center">Made by the <a href="http://www.codeforamerica.org/apps/recordtrac/" target="_blank">Code for America 2013 Fellows</a> with the City of Oakland</p>
+      RecordTrac Nepal
   	</div>
 {% endblock footer %}
 
